Add JioPay business scraper and dependencies, update .gitignore, remove old content folders
- Added jioPay_business.js with click-based navigation and content extraction
- Added package.json and package-lock.json for Node.js dependencies
- Added PDF documents in pdf/ folder
- Updated .gitignore to exclude extracted_content/ folder
- Removed html/, text/, and images/ folders from repository
- Updated lambda_firecrawl_scraper.py and requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ venv.bak/
 # Scraped content folders
 # html/ - Keeping HTML files in version control
 # text/ - Keeping text files in version control
+extracted_content/
 artifacts/
 output/
 data/
