--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-firecrawl-py==3.4.0
+pyppeteer>=1.0.2
 beautifulsoup4==4.12.3
 requests>=2.32.2
 docling==2.48.0
 Pillow>=10.0.0
+python-dotenv>=1.0.0
+asyncio-throttle>=1.0.2
